@@ -1,3 +1,6 @@
+Dec 10 2003  3.1.0  Put a second try for setting the channel via wireless
+                     extensions for some cards that fail on the first ioctl
+                     but can recover (madwifi)
 Dec 09 2003  3.1.0  Fixed prism54g override of channel change failure in
                      entering monitor mode.
                     Added more useful error messages to kismet_server
